--- a/app/templates/actions.html
+++ b/app/templates/actions.html
@@ -6,9 +6,9 @@
         <tr><th id="table-title" colspan="4">ACTIONS</th></tr>
         <tr>
             <th>Action</th>
+            <th>Yrs Wait</th>
             <th>Details</th>
             <th>Prerequisites</th>
-            <th>Yrs Wait</th>
         </tr>
         <tr>
             <td class="action-button">
@@ -22,6 +22,7 @@
                     <label>receive {{ "{:,.0f}".format(50 * num_people) }} points</label>
                 </form>
             </td>
+            <td class="center yrs-wait">{{ player_info.yrs_til_buy_organic }}</td>
             <td>
                 <ul>
                     <li>yearly shopping cost increased to $2000 (instead of $1000) per person</li>
@@ -33,7 +34,6 @@
                     <li class="{{ 'no' if player_info.path == 'college' else 'yes' }}">cannot be in college</li>
                 </ul>
             </td>
-            <td class="center">{{ player_info.yrs_til_buy_organic }}</td>
         </tr>
         <tr>
             <td class="action-button">
@@ -45,6 +45,7 @@
                     {% endif %}
                 </form>
             </td>
+            <td></td>
             <td>
                 <ul>
                     <li>pay 1% of house cost</li>
@@ -57,7 +58,6 @@
                     <li class="{{ 'yes' if player_info.house != 'None' and house.category != 'no-family' else 'no' }}">must have at least small family house</li>
                 </ul>
             </td>
-            <td></td>
         </tr>
         <tr>
             <td class="action-button">
@@ -82,6 +82,7 @@
                     {% endif %}
                 </form>
             </td>
+            <td class="center yrs-wait">{{ player_info.yrs_til_change_car }}</td>
             <td>
                 <ul>
                     <li>buy first car (military) OR</li>
@@ -98,7 +99,6 @@
             </td>
             <td>
             </td>
-            <td class="center">{{ player_info.yrs_til_change_car }}</td>
         </tr>
         <tr>
             <td class="action-button">
@@ -123,6 +123,7 @@
                     {% endif %}
                 </form>
             </td>
+            <td class="center yrs-wait">{{ player_info.yrs_til_change_house }}</td>
             <td>
                 <ul>
                     <li>buy first house OR</li>
@@ -139,7 +140,6 @@
             </td>
             <td>
             </td>
-            <td  class="center">{{ player_info.yrs_til_change_house }}</td>
         </tr>
         <tr>
             <td class="action-button">
@@ -149,6 +149,7 @@
                     <label>receive {{ "{:,.0f}".format(50 * num_people) }} points</label>
                 </form>
             </td>
+            <td class="center yrs-wait">{{ player_info.yrs_til_buy_clothes }}</td>
             <td>
                 <ul>
                     <li>pay 1% of current salary</li>
@@ -157,7 +158,6 @@
             </td>
             <td>
             </td>
-            <td class="center">{{ player_info.yrs_til_buy_clothes }}</td>
         </tr>
         <tr>
             <td class="action-button">
@@ -181,6 +181,7 @@
                     <label>receive {{ "{:,.0f}".format(60 + (40 * num_people)) }} points</label>
                 </form>
             </td>
+            <td class="center yrs-wait">{{ player_info.yrs_til_travel }}</td>
             <td>
                 <ul>
                     <li>Local: pay $500 per person, receive (10 + 20 per person) points</li>
@@ -190,7 +191,6 @@
             </td>
             <td>
             </td>
-            <td class="center">{{ player_info.yrs_til_travel }}</td>
         </tr>
         <tr>
             <td class="action-button">
@@ -201,6 +201,7 @@
                     <button type="submit" id="get_divorced">Get divorced</button>
                 </form>
             </td>
+            <td class="center yrs-wait">{{ player_info.yrs_til_change_married }}</td>
             <td>
                 <ul>
                     <li>get married:</li>
@@ -221,7 +222,6 @@
                         <ul><li class="{{ 'yes' if player_info.married else 'no' }}">must be married</li></ul>
                 </ul>
             </td>
-            <td class="center">{{ player_info.yrs_til_change_married }}</td>
         </tr>
         <tr>
             <td class="action-button">
@@ -229,6 +229,7 @@
                     <button type="submit" id="have_kid">Have Kids</button>
                 </form>
             </td>
+            <td class="center yrs-wait">{{ player_info.yrs_til_have_kid }}</td>
             <td>
                 <ul>
                     <li>roll: 1-5 = single, 6 = twins</li>
@@ -250,7 +251,6 @@
                     <li class="{{ 'yes' if player_info.age <= 45 else 'no' }}">age <= 45</li>
                 </ul>
             </td>
-            <td class="center">{{ player_info.yrs_til_have_kid }}</td>
         </tr>
         <tr>
             <td class="action-button">
@@ -258,6 +258,7 @@
                     <button type="submit" id="have_grandkid">Have Grandkids</button>
                 </form>
             </td>
+            <td class="center yrs-wait">{{ player_info.yrs_til_have_kid }}</td>
             <td>
                 <ul>
                     <li>pick x numbers on die (x = # kids over 18 / 2, round up, + 1, max=5)</li>
@@ -270,7 +271,6 @@
                     <li class="{{ 'yes' if player_info.oldest_child_age >= 18 else 'no' }}">oldest child must be at least 18</li>
                 </ul>
             </td>
-            <td class="center">{{ player_info.yrs_til_have_kid }}</td>
         </tr>
         <tr>
             <td class="action-button">
@@ -278,6 +278,7 @@
                     <button type="submit" id="buy_pet" class="{{ 'afford' if ((100) < amt_can_afford) else 'not-afford' }}">Buy Pet</button>
                 </form>
             </td>
+            <td></td>
             <td>
                 <ul>
                     <li>pay $100</li>
@@ -288,7 +289,6 @@
             </td>
             <td>
             </td>
-            <td></td>
         </tr>
         <tr>
             <td class="action-button">
@@ -313,6 +313,7 @@
                 </form>
                 {% endif %}
             </td>
+            <td class="center yrs-wait">{{ player_info.yrs_til_switch_jobs }}</td>
             <td>
                 <ul>
                     {% if can_switch_job %}
@@ -344,7 +345,6 @@
             </td>
             <td>
             </td>
-            <td class="center">{{ player_info.yrs_til_switch_jobs }}</td>
         </tr> 
         <tr>
             <td class="action-button">
@@ -360,24 +360,28 @@
                 </form>
                 {% endif %}
             </td>
+            <td class="center yrs-wait"></td>
             <td>
                 <ul>
-                    {% if player_info.path != "college" and player_info.age_grad == 0 %}
+                    {% if can_go_to_college %}
                     <li>go to 4 yr college</li>  
                     <span class="once">* eligible for scholarships but not parent contribution</span>
-                    <span class="once">* keep current job part-time for half salary</span> 
+                    {% if not (player_info.path == "military") %}
+                    <p class="once">* keep current job part-time for half salary</p> 
+                    {% else %}
+                    <p class="once">* if desired, can get regular job part-time for half salary</p>
                     {% endif %}
-                    {% if (player_info.age_grad > 0) and not (player_info.done_grad_1 and player_info.done_grad_2 and player_info.done_grad_6) %}
+                    {% endif %}
+                    {% if can_go_to_grad_school %}
                     <li>go to grad school, can graduate after 1, 2, or 6 yrs</li> 
                     <i>see jobs page for career options</i>
-                    <span class="once">* eligible for scholarships but not parent contribution</span>
-                    <span class="once">* keep current job part-time for half salary</span>
+                    <p class="once">* eligible for scholarships but not parent contribution</p>
+                    <p class="once">* keep current job part-time for half salary</p>
                     {% endif %}
                 </ul>
             </td>
             <td>
             </td>
-            <td class="center"></td>
         </tr>
         <tr>
             <td class="action-button">
@@ -385,6 +389,7 @@
                     <button type="submit" id="peace_corps" class="{{ 'afford' if ((1000) < amt_can_afford) else 'not-afford' }}">Peace Corps</button>
                 </form>
             </td>
+            <td class="center yrs-wait">{{ player_info.yrs_til_peace_corps }}</td>
             <td>
                 <ul>
                     <li>pay $1000</li>
@@ -397,7 +402,6 @@
                     <li class="{{ 'yes' if player_info.age <= 45 else 'no' }}">age <= 45</li>
                 </ul>
             </td>
-            <td class="center">{{ player_info.yrs_til_peace_corps }}</td>
         </tr>
         <tr>
             <td class="action-button">
@@ -405,6 +409,7 @@
                     <button type="submit" id="mission_trip"  class="{{ 'afford' if ((10000) < amt_can_afford) else 'not-afford' }}">Mission Trip</button>
                 </form>
             </td>
+            <td class="center yrs-wait">{{ player_info.yrs_til_mission_trip }}</td>
             <td>
                 <ul>
                     <li>pay $10,000</li>
@@ -417,7 +422,6 @@
                     <li class="{{ 'yes' if player_info.age > 45 else 'no' }}">age > 45</li>
                 </ul>
             </td>
-            <td class="center">{{ player_info.yrs_til_mission_trip }}</td>
         </tr>
         <tr>
             <td class="action-button">
@@ -441,6 +445,7 @@
                     <label>receive {{ 250 }} points</label>
                 </form>
             </td>
+            <td class="center yrs-wait">{{ player_info.yrs_til_rich_action }}</td>
             <td>
                 <ul>
                     <li>Buy pool:</li>
@@ -458,7 +463,7 @@
                     <ul>
                         <li>pay $1,000,000</li>
                         <li>receive 5000 points</li>
-                        <p class="once">* can only do once</p>
+                        <span class="once">* can only do once</span>
                     </ul>
                     <li>Season Tickets:</li>
                     <ul>
@@ -474,7 +479,6 @@
             </td>
             <td>
             </td>
-            <td class="center">{{ player_info.yrs_til_rich_action }}</td>
         </tr>
         <tr>
             <td class="action-button">
@@ -484,6 +488,7 @@
                     <button type="submit" id="invest">Invest</button>
                 </form>
             </td>
+            <td class="center yrs-wait">{{ player_info.yrs_til_invest }}</td>
             <td>
                 <ul>
                     <li>choose amount to put in</li>
@@ -492,12 +497,10 @@
             </td>
             <td>
             </td>
-            <td class="center">{{ player_info.yrs_til_invest }}</td>
         </tr>
     </table>
     <script type="text/javascript">
         var gray = JSON.parse('{{ disabled|tojson }}');
-        console.log(gray);
         for(const key in gray) {
             if(gray[key]) {   // disable action 
                 document.getElementById(key).disabled = true;
@@ -596,9 +599,9 @@
             });
         }
 
-        need_loan = "{{ player_info.need_loan }}";
+        need_loan = "{{ player_info.need_loan }}".toLowerCase() == "true" ? true : false;
         turn_num = parseFloat("{{ player_info.turn_num }}");
-        if((cur_age == 65) || (need_loan.toLowerCase() == "true") || (turn_num == -1)) {  // game over or force to get loan or game not started
+        if((cur_age == 65) || (need_loan) || (turn_num == -1)) {  // game over or force to get loan or game not started
             document.querySelectorAll('button').forEach(btn => {
                 btn.disabled = true;
             });
