fix graduation job options

--- a/app/templates/actions.html
+++ b/app/templates/actions.html
@@ -380,7 +380,7 @@
                     {% endif %}
                     {% if can_go_to_grad_school %}
                     <li>go to grad school, can graduate after 1, 2, or 6 yrs</li> 
-                    <i>see jobs page for career options</i>
+                    <i>* see jobs page for career options</i><br>
                     <span class="once">* eligible for scholarships but not parent contribution</span><br>
                     <span class="once">* keep current job part-time for half salary</span>
                     {% endif %}
