--- a/app/templates/cards.html
+++ b/app/templates/cards.html
@@ -2,7 +2,7 @@
 
 {% block content %}
     <link rel="stylesheet" href="{{ url_for('static', filename='css/cards.css') }}">
-    <table id="regular">
+    <table id="regular" class="table table-curved">
         <tr><th class="card-type" colspan="2">REGULAR CARDS</th></tr>
         <tr>
             <th>Card</th>
@@ -463,6 +463,9 @@
             <td class="good-card" id="Forgot a birthday">Forgot a birthday</td>
             <td>-50 points</td>
         </tr>
+   
+   
+    
     </table>
     <table id="college">
         <tr><th class="card-type" colspan="2">COLLEGE CARDS</th></tr>
