--- a/app/static/css/player_info.css
+++ b/app/static/css/player_info.css
@@ -273,7 +273,7 @@ button:disabled {
 }
 
 .black-border {
-    border: black 2px solid;
+    border: rgb(141, 141, 141) 2px solid;
     height: 100%;
     width: 100%;
     border-radius: 20px;
