--- a/app/static/css/houses.css
+++ b/app/static/css/houses.css
@@ -5,7 +5,7 @@ table {
 }
   
 td {
-    border: 2px solid black;
+    border: 5px solid indigo;
     font-size: 25px;
     text-align: center;
 }
@@ -21,7 +21,7 @@ td {
 
 th {
     font-size: 25px !important; 
-    border: black 2px solid;
+    border: indigo 5px solid;
     padding: 5px;
     background-color: lightskyblue;
     text-align: center !important;
@@ -71,4 +71,8 @@ button:hover {
 
 .neg {
     color: red;
+}
+
+tr:hover {
+    background-color: #e9e9e9;
 }
