--- a/app/templates/cards.html
+++ b/app/templates/cards.html
@@ -2,7 +2,7 @@
 
 {% block content %}
     <link rel="stylesheet" href="{{ url_for('static', filename='css/cards.css') }}">
-    <table id="regular" class="table table-curved">
+    <table id="regular">
         <tr><th class="card-type" colspan="2">REGULAR CARDS</th></tr>
         <tr>
             <th>Card</th>
