--- a/app/templates/jobs.html
+++ b/app/templates/jobs.html
@@ -56,8 +56,8 @@
                                 <ul>
                                     <li>25% off tuition for 4 years (still eligible for scholarships)</li>
                                     <li>eligible for benefits for # yrs served (excluding 4 yrs of college)</li>
-                                    <li>must buy vehicle upon enrollment</li>
-                                    <li>must buy house upon graduation</li>
+                                    <li>must buy vehicle upon enrollment if you don't have one</li>
+                                    <li>must buy house upon enrollment if you don't have one</li>
                                 </ul>
                             </li>
                             <li>stay in military:
@@ -546,7 +546,7 @@
             <td class="col-attrs">
                 <ul>
                     <li>don't pay for yearly pet fees</li>
-                    <li>collect other players' yearly pet fees ($100 per pet)</li>
+                    <li>collect other players' yearly pet fees</li>
                 </ul>
             </td>
         </tr>
