--- a/app/static/css/base.css
+++ b/app/static/css/base.css
@@ -14,6 +14,8 @@ body {
 
 #nav-container {
     margin-bottom: 20px;
+    display: flex;
+    justify-content: space-between;  
 }
 
 a {
@@ -34,3 +36,4 @@ hr {
     width: 30%;
     margin-left: 30%
 }
+
